k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: candidate-onboarding-app-service
spec:
  type: ClusterIP
  selector:
    app: candidate-onboarding-app
  ports:
    - port: 80
      targetPort: 5000
