k8s/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: candidate-onboarding-app-route
spec:
  to:
    kind: Service
    name: candidate-onboarding-app-service
  port:
    targetPort: 8080
